usando constante para definir link para github

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
         <md-button class="md-icon-button"
                    aria-label="GitHub"
-                   ng-href="https://github.com/luissiqueira/angular-movies"
+                   ng-href="{{ ROUTES.GIT_HUB }}"
                    target="_blank">
             <img ng-src="images/github.png" />
         </md-button>
@@ -66,7 +66,7 @@
         <p>
             <small>Luis Siqueira.</small>
             <md-button class="md-primary"
-                       ng-href="https://github.com/luissiqueira/angular-movies"
+                       ng-href="{{ ROUTES.GIT_HUB }}"
                        target="_blank">View in GitHub.
             </md-button>
         </p>
